@@ -1,2 +1,2 @@
-VERSION = 5
+VERSION = 6
 NAME = 'Karl'
